--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,17 +18,17 @@
 		android:configChanges="orientation"> <!-- lock orienation so async task doesnt die (shitty workaround) -->
 
 
-        <activity
-            android:name="com.example.platypuscontrolapp.ConnectScreen"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait"
-   			android:configChanges="orientation|keyboardHidden" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <!--<activity-->
+            <!--android:name="com.example.platypuscontrolapp.ConnectScreen"-->
+            <!--android:label="@string/app_name"-->
+            <!--android:screenOrientation="portrait"-->
+   			<!--android:configChanges="orientation|keyboardHidden" >-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        <!--</activity>-->
         
          <activity
             android:name="com.example.platypuscontrolapp.TeleOpPanel"
@@ -36,9 +36,13 @@
             android:screenOrientation="landscape"
    			android:configChanges="orientation|keyboardHidden"> 
             <intent-filter>
-                <action android:name="android.intent.action.TeleOpPanel" />
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+                <!--<action android:name="android.intent.action.TeleOpPanel" />-->
             </intent-filter>
         </activity>
+
+
          <activity
             android:name="com.example.platypuscontrolapp.ServerTest"
             android:label="@string/app_name" >
